@@ -3,6 +3,7 @@ package com.tngtech.archunit.library.freeze;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -10,11 +11,9 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.function.Function;
 
-import com.google.common.base.Function;
 import com.google.common.base.Functions;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
@@ -43,6 +42,7 @@ import static com.tngtech.archunit.lang.syntax.ArchRuleDefinition.classes;
 import static com.tngtech.archunit.library.freeze.FreezingArchRule.freeze;
 import static com.tngtech.archunit.testutil.Assertions.assertThat;
 import static com.tngtech.archunit.testutil.Assertions.assertThatRule;
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 @RunWith(DataProviderRunner.class)
@@ -222,13 +222,10 @@ public class FreezingArchRuleTest {
         ArchRule frozen = freeze(rule("some description")
                 .withViolations("some #now changed# violation", "second #now changed somehow# violation", "and new").create())
                 .persistIn(violationStore)
-                .associateViolationLinesVia(new ViolationLineMatcher() {
-                    @Override
-                    public boolean matches(String lineFromFirstViolation, String lineFromSecondViolation) {
-                        String storedCleanedUp = lineFromFirstViolation.replaceAll("#.*#", "");
-                        String actualCleanedUp = lineFromSecondViolation.replaceAll("#.*#", "");
-                        return storedCleanedUp.equals(actualCleanedUp);
-                    }
+                .associateViolationLinesVia((lineFromFirstViolation, lineFromSecondViolation) -> {
+                    String storedCleanedUp = lineFromFirstViolation.replaceAll("#.*#", "");
+                    String actualCleanedUp = lineFromSecondViolation.replaceAll("#.*#", "");
+                    return storedCleanedUp.equals(actualCleanedUp);
                 });
 
         assertThatRule(frozen)
@@ -246,12 +243,7 @@ public class FreezingArchRuleTest {
         ArchRule frozen = freeze(rule("some description")
                 .withViolations("violation", "equivalent one").create())
                 .persistIn(violationStore)
-                .associateViolationLinesVia(new ViolationLineMatcher() {
-                    @Override
-                    public boolean matches(String lineFromFirstViolation, String lineFromSecondViolation) {
-                        return true;
-                    }
-                });
+                .associateViolationLinesVia((lineFromFirstViolation, lineFromSecondViolation) -> true);
 
         assertThatRule(frozen)
                 .checking(importClasses(getClass()))
@@ -268,12 +260,9 @@ public class FreezingArchRuleTest {
         // Nevertheless this way we'll see a CI failure on some Mac OS environment if this assumption is wrong
         Set<String> lineSeparators = ImmutableSet.of(windowsLineSeparator, unixLineSeparator, System.lineSeparator());
 
-        return FluentIterable.from(cartesianProduct(lineSeparators, lineSeparators)).filter(new Predicate<List<String>>() {
-            @Override
-            public boolean apply(List<String> input) {
-                return !input.get(0).equals(input.get(1));
-            }
-        }).toList();
+        return cartesianProduct(lineSeparators, lineSeparators).stream()
+                .filter(input -> !input.get(0).equals(input.get(1)))
+                .collect(toList());
     }
 
     @Test
@@ -534,10 +523,7 @@ public class FreezingArchRuleTest {
         }
 
         RuleCreator withViolations(final String... messages) {
-            List<ViolatedEvent> newEvents = new ArrayList<>();
-            for (String message : messages) {
-                newEvents.add(new ViolatedEvent(message));
-            }
+            List<ViolatedEvent> newEvents = Arrays.stream(messages).map(ViolatedEvent::new).collect(toList());
             return new RuleCreator(description, newEvents, textModifier);
         }
 
@@ -546,12 +532,7 @@ public class FreezingArchRuleTest {
         }
 
         RuleCreator withStringReplace(final String toReplace, final String replaceWith) {
-            return new RuleCreator(description, events, new Function<String, String>() {
-                @Override
-                public String apply(String input) {
-                    return input.replace(toReplace, replaceWith);
-                }
-            });
+            return new RuleCreator(description, events, input -> input.replace(toReplace, replaceWith));
         }
 
         ArchRule create() {
@@ -665,11 +646,7 @@ public class FreezingArchRuleTest {
         }
 
         ViolatedEvent apply(Function<String, String> textModifier) {
-            List<String> result = new ArrayList<>();
-            for (String line : descriptionLines) {
-                result.add(textModifier.apply(line));
-            }
-            return new ViolatedEvent(result);
+            return new ViolatedEvent(descriptionLines.stream().map(textModifier).collect(toList()));
         }
     }
 }
